--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
     <div id="tasks"></div>
 
+    <form id="addTask">
+        <input id="addTitle" required />
+        <button id="addTaskButton">Add Task</button>
+    </form>
+
     <script src="main.js"></script>
 </body>
 </html>
