--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
         <input id="brand" type="text" required/>
         <input id="model" type="text" required />
         <input id="price" type="number" required/>
-        <input id="user" type="text" required/>
+        <input id="user" type="text"/>
         <button id="add">Prideti</button>
     </from>
+
+    <div id="div"></div>
 
     <script src="main.js"></script>
 </body>
