--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <from id="form">
-        <input id="brand" type="text" required/>
-        <input id="model" type="text" required />
-        <input id="price" type="number" required/>
-        <input id="user" type="text"/>
-        <button id="add">Prideti</button>
-    </from>
+    <form id="form">
+        <input id="brand" required placeholder="Brand"/>
+        <input id="model" required placeholder="Model"/>
+        <input id="price" type="number" required placeholder="Price"/>
+        <button>Prideti</button>
+    </form>
 
     <div id="div"></div>
 
