--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,18 +13,24 @@
         <input id="brand" placeholder="Brand" required />
         <input id="model" placeholder="Model" required />
         <input type="number" id="price" placeholder="Price" required />
+        <textarea id="description" placeholder="Your text here"></textarea>
 
         <button>Pridėti skelbimą</button>
     </form>
 
     <div id="edit-form-output"></div>
 
-    <form class="hidden" id="edit-form">
+    <form class="edit-form" id="edit-form">
         <input id="edit-brand-input" placeholder="Brand" required />
         <input id="edit-model-input" placeholder="Model" required />
         <input type="number" id="edit-price-input" placeholder="Price" required />
 
         <button>Atnaujinti skelbimą</button>
+        <button id="cancel-edit-button" type="button" class="cancel-edit-button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
+            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+          </svg></button>
     </form>
 
     <div id="adverts"></div>
